syntax = "proto3";

package go.micro.srv.message;

service MessageService {
    //    rpc Create (User) returns (Response) {
    //    }
    //    rpc GetOne (UserId) returns (UserResponse) {
    //    }
    rpc GetMany (PageNumPageSize) returns (MessageListResponse) {
    }
    //    rpc Post (User) returns (IdResponse) {
    //    }
    //    rpc Put (User) returns (Response) {
    //    }
    //    rpc Delete (UserId) returns (Response) {
    //    }
}

message Message {
    uint32 id = 1;
    uint32 userId = 2;
    string message = 3;
    string createTime = 5;
    string updateTime = 6;
}

message MessageListResponse {
    int32 code = 1;
    string msg = 2;
    repeated Message messages = 3;
    PageMap page = 4;
}

message Response {
    int32 code = 1;
    string msg = 2;
}

message IdResponse {
    int32 code = 1;
    string msg = 2;
    uint32 id = 3;
}

message PageNumPageSize {
    int32 pageNum = 1;
    int32 pageSize = 2;
}

message PageMap {
    int32 pageNum = 1;
    int32 pageSize = 2;
    int32 count = 3;
}
